node-mongo/templates/nodejs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: easy-notes
  name: easy-notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easy-notes-pod
  template:
    metadata:
      labels:
        app: easy-notes-pod
    spec:
      containers:
      - name: easy-notes
        resources: {}
        image: wshihadeh/node-easy-notes-app:latest
        ports:
        - containerPort: 3000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: easy-notes
  name: easy-notes-service
spec:
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app: easy-notes-pod
  type: ClusterIP
