node-mongo/templates/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: easy-notes-ingress
spec:
  rules:
  - host: easynotes.lvh.me
    http:
      paths:
      - backend:
          serviceName: easy-notes-service
          servicePort: 8080
